--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="favicon.ico" type="image/ico">
   <title>Wallnut Team</title>
@@ -30,7 +30,7 @@
           <div class="contacts__top">
             <div class="contacts__top-select">
               <img src="./assets/icons/03.svg" alt="">
-              <select name="" id="" class="contacts__language">
+              <select class="contacts__language">
                 <option value="">Русский (Россия)</option>
               </select>
             </div>
@@ -47,14 +47,13 @@
           </div>
         </div>
         <div class="header-top__buttons">
-          <a data-fancybox data-src="#modal" href="javascript:;">
-            <button class="header-top__callback">Обратный звонок</button>
-          </a>
+          <button class="header-top__callback" data-fancybox data-src="#modal" href="javascript:;">
+            Обратный звонок
+          </button>
           <div class="modal-window modal-window_thx" id="modal2">
             <h2 class="modal-window__title">Спасибо за Заявку!</h2>
             <p class="modal-window__text modal-window_thx__text">Специалист свяжется с вами в течение 15 минут и ответит на все интересующие вопросы</p>
             <div>
-              <!-- <img class='modal-window__img-heart' src="./assets/images/header/03.png" alt=""> -->
             </div>
           </div>
 
@@ -62,10 +61,10 @@
             <h2 class="modal-window__title">Обратный звонок</h2>
             <p class="modal-window__text">Оставьте заявку и мы свяжаемся с вами в течение 15 минут и ответим на все вопросы</p>
             <div class="modal-window__forms forms">
-              <form class="forms__tel" action="">
+              <form class="forms__tel">
                 <p class="forms__text text-tel"><span>Телефон*</span><input data-inputmask="'mask': '+7 (999) 999-99-99'" class="forms__number" type="tel" /></p>
               </form>
-              <form class="forms__person" action="">
+              <form class="forms__person">
                 <p class="forms__text text-name"><span>Имя*</span><input class="forms__name" type="text" placeholder="Ваше имя"></p>
               </form>
             </div>
@@ -103,14 +102,14 @@
           <li class="nav__item"><a>Оптовым клиентам</a></li>
           <li class="nav__item"><a>Контакты</a></li>
         </ul>
-        <a data-fancybox data-src="#modal" href="javascript:;">
-          <button class="header-top__callback active">Обратный звонок</button>
-        </a>
+        <button data-fancybox data-src="#modal" href="javascript:;">
+          Обратный звонок
+        </button>
         <div class="contacts__top-select active">
           <p class="contacts__choice">Выбор языка</p>
           <div>
             <img src="./assets/icons/03.svg" alt="">
-            <select name="" id="" class="contacts__language">
+            <select class="contacts__language">
               <option value="">Русский (Россия)</option>
             </select>
           </div>
